# FFmpegPlayer

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/codec/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  FFmpeg.cpp  FFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  macro.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/java/com/example/ffmpegplayer/: IPlayer.java  LaunchActivity.java  MainActivity.java  Player.java
app/src/main/res/layout/: activity_launch.xml  activity_main.xml
app/src/main/res/layout-land/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
